# tgmanage

./: .gitignore  LICENSE  README  README.md  README.rst  cables.py  gondul.py  infra-dns.txt  main.py  netlist.txt  patchlist.txt  patchlist.txt.crew  patchlist.txt.distrosort  patchlist_extras.txt  switches.py  switches.txt  switches.txt.crew  switches_extras.txt
bootstrap/: README.md  apply-baseupdate.sh  create-hostsfile.sh  create-shellconf.pl  fetch-debinstall.sh  fetch-ubuntulive.sh  init-sshkeys.sh  install-dependencies.sh  make-base-requires.sh  make-bind-include.pl  make-dhcp6-init.sh  make-dhcpd-include.pl  make-dhcpd.pl  make-dhcpd6.pl  make-first-zones.pl  make-missing-conf.pl  make-named.pl  make-pxeboot.sh  make-reverse4-files.pl  update-baseservice.sh  update-tools.sh
clients/: accesspoints.pl  admintool.sh  build-linknets.pl  dhcptail.pl  fetch-cubemap-munin.sh  ipv6-dns.pl  ipv6-stats.pl  lldpdiscover.pl  ping.pl  portnames.pl  smanagrun.pl  snmp.sql  snmpfetch.pl  snmpfetchng.pl  update-public-nms.sh  update-public-speedometer.pl  update-switch-placements.pl
dhcp/: ciscowlc.conf  dhcpd.conf  generated-include.conf  pxe-boot.conf  revzones.conf
dlink-ng/: dlink-ng-config.pm  dlink-ng-config.pm.dist  dlink-ng.pl  make-dlink-config.pl
examples/: README.md
fap/: README.md
include/: config.local.pm  config.pm  config.pm.dist  (+2 more)
tools/dhcpns/: .gitignore  README.md  main.py  pdns.py  pyproject.toml
tools/dhcpns/config/: ddns.py  dhcp4.py  dhcp6.py
tools/koblingsplan/: .gitignore  README.adoc  koblingsplan-to-netbox.py  pyproject.toml  script.py
(+3216 files in other folders)
