[tool.poetry]
name = "tg-cabling"
version = "0.1.0"
description = ""
authors = ["Håkon Solbjørg <hakon@solbj.org>"]
readme = "README.md"
packages = [{include = "tg_cabling"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
pynetbox = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
